--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit
-tensorflow
-keras
+tensorflow==2.15.0
 numpy
 opencv-python-headless
 pillow
-requests
 gdown
 matplotlib
-pandas
 scikit-learn
+pandas
+seaborn
+plotly
